2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/Makefile.am: added missing header directories.

	* pcs/cal-factory.h: include <libical/ical.h>, not <ical.h>.

	* gui/dialogs/meeting-page.c: added missing headers.
	(meeting_page_construct): free 'backend_address' as returned
	by cal_client_get_cal_address(). Removed code to create the
	meeting model's ETable not removed with the merge.

	* gui/e-meeting-list-view.c: updated addressbook headers.

	* gui/gnome-cal.h: added missing ',' in the GnomeCalendarViewType
	enum.
	
2003-10-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (e_day_view_update_query): dont set status
	messages here, already set in e_cal_view_update_query.
	(update_query): removed this function.
	(e_day_view_recalc_day_starts): call e_day_view_update_query,
	not update_query.

	* gui/e-week-view.c (e_week_view_update_query): dont set status
	messages here, already set in e_cal_view_update_query.

	* gui/gnome-cal.c (adjust_query_for_view): new function to adjust
	the query for the visible time range on a given view.
	(gnome_calendar_set_query): call adjust_query_for_view for each
	one of the views.

2003-10-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-view.c (e_cal_view_init): connect to signals on the
	model we create here, so that we get notifications for changes.

	* gui/gnome-cal.c (gnome_calendar_set_query): set the query
	on all models.
	(gnome_calendar_open): update the date navigator query.

2003-10-14  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal.c (cal_notify_timezone_requested): never send NULL
	strings to ORBit.

	* gui/e-cal-view.c (e_cal_view_create_popup_menu): removed
	unneeded variables. Also, fixed a typo that was making the
	menu options be disabled when they should be enabled.

2003-10-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_get_client_for_uri): new function.

	* gui/gnome-cal.[ch] (gnome_calendar_set_default_client): new function.
