@@ -52,8 +52,6 @@ struct _EMeetingListViewPrivate
 	EMeetingStore *store;
 
 	EBook *ebook;
-	gboolean book_loaded;
-	gboolean book_load_wait;
 
         GNOME_Evolution_Addressbook_SelectNames corba_select_names;
 };
@@ -74,26 +72,17 @@ static icalparameter_role roles[] = {ICAL_ROLE_CHAIR,
 static GtkTreeViewClass *parent_class = NULL;
 
 static void
-book_open_cb (EBook *book, EBookStatus status, gpointer data)
-{
-	EMeetingListView *view = E_MEETING_LIST_VIEW (data);
-	
-	if (status == E_BOOK_STATUS_SUCCESS)
-		view->priv->book_loaded = TRUE;
-	else
-		g_warning ("Book not loaded");
-	
-	if (view->priv->book_load_wait) {
-		view->priv->book_load_wait = FALSE;
-		gtk_main_quit ();
-	}
-}
-
-static void
 start_addressbook_server (EMeetingListView *view)
 {
+	GError *error = NULL;
+
 	view->priv->ebook = e_book_new ();
-	e_book_load_default_book (view->priv->ebook, book_open_cb, view);
+	if (!e_book_load_local_addressbook (view->priv->ebook, &error)) {
+		g_warning ("start_addressbook_server(): %s", error->message);
+		g_error_free (error);
+
+		return;
+	}
 }
 
 static void
